[gd_scene load_steps=3 format=3 uid="uid://0bfxcmsgoadu"]

[ext_resource type="Script" path="res://scripts/wave_spawner/wave_spawner.gd" id="1_nuu63"]
[ext_resource type="Resource" uid="uid://dd2ihe5xtt07v" path="res://resources/waves/waves.tres" id="2_vmhcx"]

[node name="WaveSpawner" type="Node2D"]
script = ExtResource("1_nuu63")
waves_resource = ExtResource("2_vmhcx")

[node name="IsWaveActiveTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SpawnEnemyTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SpawnWaveGroupTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="IsWaveActiveTimer" to="." method="_on_is_wave_active_timer_timeout"]
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_spawn_enemy_timer_timeout"]
[connection signal="timeout" from="SpawnWaveGroupTimer" to="." method="_on_spawn_wave_group_timer_timeout"]
